--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Chancho</title>
     <link rel="stylesheet" href="static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -23,7 +24,10 @@
 </div>
 
 <img class= 'icon'src="static/icon.png" alt="">
-<img id="chancho" src="static/chancho verde.png" alt="">
+
+
+<button  id="chancho" class="btn btn-primary btn-lg">CHANCHO</button>
+
 <img id="tick" src="static/green_tick.png" alt="">
 <div id="log">
     <h2 id="log_text">Chancho arriba</h2>
@@ -91,6 +95,7 @@
     var can_choose = false;
     var can_select_card = false;
     var n_to_select;
+    var puede_chanchear = false;
     var tick = document.getElementById("tick");
 
     //objects
@@ -103,7 +108,7 @@
     var user_deck = [0,0,0,0];
     var selected_deck = [0,0,0,0];
     var selected_n = 0;
-    var puede_chanchear = false;
+    
 
     document.getElementById("name_form").addEventListener("submit", function(e) {
         e.preventDefault();
@@ -149,7 +154,8 @@
         socket.emit('start_game');
     });
 
-    socket.on('initial_deck', function (deck) { 
+    socket.on('initial_deck', function (deck) {  //start/new round
+        puede_chanchear = false;
         sala_espera.style.visibility = 'hidden';
         start_button.style.visibility = 'hidden';
         //ACA
@@ -164,14 +170,12 @@
         //to optimize
         let aux = true;
         for(let i =1; i<4;i++){
-            if(deck[i] != deck[0]){
+            if(deck[i] != deck[0]){ //aux false si mazo no son 4 iguales
                 aux = false;
             }
         }
         if(aux == true){
-            window.alert('podes chanchear!!');
             puede_chanchear = true;
-            chancho_img.style.filter = 'grayscale(70%)';
         }
     });
 
@@ -199,9 +203,7 @@
             }
         }
         if(aux == true){
-            window.alert('podes chanchear!!');
             puede_chanchear = true;
-            chancho_img.style.filter = 'grayscale(70%)';
         }
     });
 
@@ -254,7 +256,7 @@
         }
     });
 
-    //enviar eleccion
+    //enviar eleccion cartas
     confirm_button.addEventListener("click", function() {
         if(can_select_card == true && selected_n == n_to_select){
             can_select_card = false;
@@ -321,11 +323,11 @@
     //ACTUALIZAR tabla resultados
     socket.on('resultado_chancho', function (name,puntaje,user_dict,users) {//perdedor ronda 1ero
         window.alert('Último fue '+ name + '!!');
-        while(player_list_in_game_ul.lastElementChild) { //removes all children
+        while(player_list_in_game_ul.lastElementChild) { //removes all player names
             player_list_in_game_ul.removeChild(player_list_in_game_ul.lastElementChild);
         }  
 
-        for(let i =0;i<users.length;i++){  //updates children
+        for(let i =0;i<users.length;i++){  //updates player names with results
                 console.log(user_dict[users[i]]);
                 console.log(user_dict[puntaje[ user_dict[ users[i] ] ]]);
                 let li = document.createElement('li');
@@ -341,6 +343,7 @@
         cart_n[1].style.backgroundColor = 'white';
         cart_n[2].style.backgroundColor = 'white';
         cart_n[3].style.backgroundColor = 'white';
+        selected_deck = [0,0,0,0];
         log_text.innerHTML = 'esperando siguiente orden';
         
         //definir si alguien ya perdió
@@ -360,7 +363,7 @@
         }
     });
 
-    //3 botones a la derecha faltan  ----------------------------
+    //3 botones a la derecha   ----------------------------
 
     buttons[3].addEventListener('click',function(e) {
         if(can_choose){
@@ -399,6 +402,13 @@
     });
 
     // socket.on('', function () {   });
+    socket.on('finalizar_client', function () {
+        socket.emit('finalizar');
+        });
+    socket.on('nueva ronda_client', function () { 
+        socket.emit('start_game');
+      });
+
 
 </script>
 
